Kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kire-kiii
  labels:
    name: kire-kiii
