Kubernetes/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: kire-kiii
  labels:
    app: spring-boot-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: lalkovkire2694/spring-backend-kiii:1d8ac297c134ef3ca2f1f5fdeec6321998aa64b1 
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
  namespace: kire-kiii
  labels:
    app: spring-boot-app
spec:
  selector:
    app: spring-boot-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
