Kubernetes/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: kire-kiii
  labels:
    app: frontend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lalkovkire2694/angular-frontend-kiii:1d8ac297c134ef3ca2f1f5fdeec6321998aa64b1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  namespace: kire-kiii
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
