Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: kire-kiii
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-frontend
                port:
                  number: 80
